--- a/portfolio/Related.html
+++ b/portfolio/Related.html
@@ -113,11 +113,11 @@ dd li{
 
 </head>
 <body>
-<h1>Related Links</h1>
+<h1>Related Links</h1><a href="Homepage.html">
 <div class="home-icon">
-    <a href="Homepage.html">
-        <i class="fa fa-home" ></i></a>
-  </div>
+    
+        <i class="fa fa-home" ></i>
+  </div></a>
 <ul>
 
     <li><a href="#A" >A</a></li>
