--- a/portfolio/Related.html
+++ b/portfolio/Related.html
@@ -113,11 +113,12 @@ dd li{
 
 </head>
 <body>
-<h1>Related Links</h1><a href="Homepage.html">
-<div class="home-icon">
-    
-        <i class="fa fa-home" ></i>
-  </div></a>
+<h1>Related Links</h1>
+   <div class="home-icon">
+    <a href="Homepage.html">
+      <i class="fa fa-home"></i>
+    </a>
+  </div>
 <ul>
 
     <li><a href="#A" >A</a></li>
@@ -149,11 +150,7 @@ dd li{
 
 </ul>
 
-<div class="home-icon">
-    <a href="file:///C:/Users/chat/Desktop/portfolio/Homepage.html#">
-      <i class="fa fa-home"></i>
-    </a>
-  </div>
+
   <ul>
     <!-- ... -->
   </ul>
